2015-02-26  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml (language): Using new native R support at Travis

2014-09-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.1.2

	* R/pkgKitten.R (kitten): Correctly invoke new function

2014-09-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.1.1

	* inst/NEWS.Rd: Added

2014-09-07  Dirk Eddelbuettel  <edd@debian.org>

	* R/pkgKitten.R: New function playWithPerPackageHelpPage() to create
	a basic per-package manual page which purrs
	* man/playWithPerPackageHelpPage.Rd: Documentation for new function
	* NAMESPACE: Export new function

2014-06-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.1.0 and first CRAN upload
